[tool.poetry]
name = "solar-sym"
version = "0.1.0"
description = "Exercise on Solar System Simulations."
authors = ["ElliottSullingeFarrall <elliott.chalford@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
snakeviz = "^2.2.0"
scipy = "^1.12.0"
tqdm = "^4.66.2"
astroquery = "^0.4.7"
astropy = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
